--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,7 +7,7 @@ on:
     branches: [ master ]
 
 jobs:
-  check_debug_statments:
+  check_debug_statements:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
@@ -23,8 +23,9 @@ jobs:
         # Loop through each pattern
         for PATTERN in "${PATTERNS[@]}"
         do
-          #Use grep to search for the pattern, excluding vendor directory
-          RESULT=$(grep -r -n "$PATTERN" --include=\*.php --exclude-dir=vendor . || true)
+          # Use grep to search for the pattern, excluding vendor directory
+          # `-F` tells grep to interpret the pattern as a fixed string rather than a regex.
+          RESULT=$(grep -r -n -F "$PATTERN" --include=\*.php --exclude-dir=vendor . || true)
 
           if [ ! -z "$RESULT" ]; then
             echo "Found $PATTERN:"
@@ -33,13 +34,9 @@ jobs:
           fi
         done
 
-        if[ $FOUND_DEBUG -eq 1]; then
+        if [ $FOUND_DEBUG -eq 1 ]; then
           echo "Error: Debug statements found. Please remove them before merging."
           exit 1
         else
           echo "No debug statements found."
         fi
-        
-
-        
-    
